--- a/MISA.AMIS.FE/misa_amis/src/styles/common.css
+++ b/MISA.AMIS.FE/misa_amis/src/styles/common.css
@@ -2,19 +2,18 @@
 .m-btn {
     display: flex;
     align-items: center;
-    background-color: #019160;
+    background-color: #2ca01c;
     border-radius: 4px;
     height: 40px;
     font-size: 13px;
     color: #ffffff;
-    /*font-family: */
-    padding: 0px 16px;
+    padding: 8px 20px;
     border: none;
     cursor: pointer;
 }
 
     .m-btn:hover {
-        background-color: #2FBE8E
+        background-color:  #35bf22
     }
 
     .m-btn .btn-text {
@@ -26,13 +25,18 @@
     }
 
 .m-btn-second {
-    border: 1px solid #bbbbbb;
-    border-radius: 4px;
-    height: 40px;
+    border: 1px solid #8d9096;
+    border-radius: 3px;
+    height: 36px;
     font-size: 13px;
-    color: #000000;
-    padding: 0px 24px;
+    color: #111;
+    padding: 8px 20px;
+    background-color: transparent;
     text-align: center;
+}
+
+.m-btn-second :hover{
+    background-color: #d2d3d6
 }
 
 .btn-paging {
@@ -41,7 +45,7 @@
     cursor:pointer
 }
 .btn-paging:hover {
-    background-color:#bbbbbb;
+    background-color:#babec5;
     border-radius:5px;
 }
 /*-------------------icon-----------------*/
@@ -71,18 +75,19 @@
 }
 
 .m-input{
-    border:1px solid #bbbbbb;
-    border-radius:4px;
-    height: 40px;
+    border:1px solid #babec5;
+    border-radius:2px;
+    height: 30px;
     padding-left: 16px;
 }
     .m-input::placeholder{
         font-size: 11px;
-        color: #bbbbbb;
+        color: #babec5;
+        font-style: italic;
     }
 
     .m-input:focus{
-        border: 1px solid #019160;
+        border: 1px solid #2ca01c;
         font-size: 13px;
         color: #000000;
         outline: none;
@@ -119,12 +124,12 @@
     width: 30px;
     height: 30px;
     padding: 5px;
-    border: 1px solid #bbbbbb;
+    border: 1px solid #babec5;
     cursor:pointer
 }
 
     .paging-number:hover {
-        background-color: #bbbbbb
+        background-color: #babec5
     }
     .paging-number:disabled:hover {
         background-color: black
@@ -140,8 +145,8 @@
 
 /* width */
 ::-webkit-scrollbar {
-    height: 5px;
-    width: 5px;
+    height: 10px;
+    width: 10px;
     border-radius: 50%
 }
 
@@ -152,12 +157,12 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #888;
+    background: #b4c8d8;
 }
 
     /* Handle on hover */
     ::-webkit-scrollbar-thumb:hover {
-        background: #555;
+        background: rgb(160, 109, 109);
     }
 
 /*---------------mask loading-------------------*/
@@ -178,7 +183,7 @@
 /* -------------------------OPTION--------------------------------*/
 .m-select{
     padding: 0px 12px;
-    border: 1px solid #bbbbbb;
+    border: 1px solid #babec5;
     border-radius: 4px;
     height: 40px;
     color: #000000;
@@ -281,6 +286,66 @@
     text-align:center;
 }
 
+.mi-16{
+    width: 16px;
+    height: 16px;
+    min-width: 16px;
+    min-height: 16px;
+}
+
+.mi-24{
+    width: 24px;
+    height: 24px;
+    min-width: 24px;
+    min-height: 24px;
+}
+
+.sticky-right{
+    position: sticky !important;
+    /* right: 0; */
+    right: 32px;
+    border-right: none
+}
+
+.sticky-left{
+    position: sticky !important;
+    left: 0;
+    z-index: 3;
+}
+
+.left-16{
+    left: 16px;
+    border-left: none;
+}
+
+.left-66{
+    left: 66px;
+}
+
+.td-white-30{
+    background-color: #ffffff;
+    z-index: 3;
+    position: sticky;
+    right:-1px;
+    border:none;
+}
+
+.td-grey-30{
+    background-color: #f4f5f6;
+    z-index: 3;
+    position: sticky;
+    right: -31px;
+    border: none;
+}
+
+.td-left-16{
+    background-color: #ffffff;
+    z-index: 3;
+    position: sticky;
+    left:0px;
+    border:none;
+    padding: 0px !important;
+}
 /*----------------------hr----------------------*/
 .hr-group-label{
     width: 70px;
