--- a/MISA.AMIS.FE/misa_amis/src/styles/common.css
+++ b/MISA.AMIS.FE/misa_amis/src/styles/common.css
@@ -48,15 +48,14 @@
     background-color:#babec5;
     border-radius:5px;
 }
+
+.btn-previous,.btn-next{
+    border: none;
+    background-color: #fff;
+}
 /*-------------------icon-----------------*/
 .icon-add {
     /* background-image: url('../../assets/icon/add.png'); */
-    width: 16px;
-    height: 16px;
-}
-
-.icon-search {
-    /* background-image: url('../../assets/icon/search.png'); */
     width: 16px;
     height: 16px;
 }
@@ -104,9 +103,10 @@
 }
 
 .m-label{
-    font-size: 13px;
-    color: #000000;
+    font-size: 12px;
+    font-weight: 700;
     padding-bottom: 4px;
+    white-space: nowrap
 }
 .currency{
     position: absolute;
@@ -114,17 +114,47 @@
     line-height: 80px;
     font-style: italic
 }
+
+input[type=checkbox] {
+    position: relative;
+      cursor: pointer;
+}
+input[type=checkbox]:before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    top: 0;
+    left: 0;
+    border: 1px solid #babec5;
+    border-radius: 3px;
+    background-color: white;
+}
+input[type=checkbox]:checked:after {
+    content: "";
+    display: block;
+    width: 5px;
+    height: 10px;
+    border: solid rgb(219, 61, 61);
+    border-width: 0 2px 2px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+    position: absolute;
+    /* top: 2px; */
+    left: 6px;
+}
 /*-----------------------paging---------------------*/
 
-.paging-number {
+.page-number {
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     padding: 5px;
-    border: 1px solid #babec5;
+    border: none;
     cursor:pointer
 }
 
@@ -135,9 +165,15 @@
         background-color: black
     }
 
-.paging_number_active {
-    background-color: #019160;
-    color: #ffffff
+.page-active {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+    padding: 5px;
+    border: 1px solid #babec5;
+    cursor:pointer
 }
 
 
@@ -264,18 +300,6 @@
     background-color: #c7e7cc !important;
 }
 
-/*------------------------display------------------------*/
-.mg-left-10{
-    margin-left: 10px;
-}
-
-.element-end{
-    margin-bottom: 0px !important;
-}
-
-.swal2-container{
-    z-index: 10000 !important;
-}
 
 /*-------------------classCommon---------------------*/
 .text-right{
@@ -303,7 +327,7 @@
 .sticky-right{
     position: sticky !important;
     /* right: 0; */
-    right: 32px;
+    right: 30px;
     border-right: none
 }
 
@@ -319,23 +343,25 @@
 }
 
 .left-66{
-    left: 66px;
+    left: 56px;
 }
 
 .td-white-30{
     background-color: #ffffff;
     z-index: 3;
     position: sticky;
-    right:-1px;
+    right:0px;
     border:none;
+    padding: 0px !important;
 }
 
 .td-grey-30{
     background-color: #f4f5f6;
     z-index: 3;
     position: sticky;
-    right: -31px;
+    right: -30px;
     border: none;
+    padding: 0px !important;
 }
 
 .td-left-16{
@@ -345,6 +371,34 @@
     left:0px;
     border:none;
     padding: 0px !important;
+}
+
+.mr-4{
+    margin-right: 1em;
+}
+
+.ml-4{
+    margin-left: 1em;
+}
+
+.mt-2{
+    margin-top: 2px;
+}
+
+.mt-4{
+    margin-top: 4px;
+}
+
+.pd-b-12{
+    padding-bottom: 12px;
+}
+
+.p-r-26{
+    padding-right: 26px;
+}
+
+.p-r-6{
+    padding-right: 6px;
 }
 /*----------------------hr----------------------*/
 .hr-group-label{
@@ -358,17 +412,21 @@
 /*----------------------flex----------------------*/
 .m-row{
     display: flex;
-    margin-bottom: 16px;
+    padding-bottom: 12px;
 }
-.m-flex{
-    display: flex;
-}
-.m-flex-5{
+
+.flex-5{
     flex:0.5;
 }
-.m-flex-1{
+
+.flex-1{
     flex: 1;
 }
-.m-flex-4{
+
+.flex-4{
     flex:4;
+}
+
+.flex-column{
+    flex-direction: column;
 }
