--- a/MISA.AMIS.FE/misa_amis/src/styles/common.css
+++ b/MISA.AMIS.FE/misa_amis/src/styles/common.css
@@ -54,6 +54,7 @@
 .btn-next {
   border: none;
   background-color: #fff;
+  cursor: pointer;
 }
 /*-------------------icon-----------------*/
 .icon-add {
